[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/entity/DemonEat.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 40.0

[node name="DemonEat" type="Area2D"]
collision_layer = 128
input_pickable = false
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MouseOpen" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseOpen"]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_DemonEat_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_DemonEat_body_exited"]
[connection signal="mouse_entered" from="MouseOpen" to="." method="_on_MouseOpen_mouse_entered"]
[connection signal="mouse_exited" from="MouseOpen" to="." method="_on_MouseOpen_mouse_exited"]
